norikra: updated README.md